[project]
name = "clouds-system"
version = "0.1.1"
description = "Procedural cloud generation system for session-based games"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "numba>=0.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
